--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL='mysql://duc:DucDuc123123!@@127.0.0.1:3306/studentPortal?connection_limit=20&pool_timeout=0'
+# DATABASE_URL='mysql://duc:DucDuc123123!@@127.0.0.1:3306/studentPortal?connection_limit=20&pool_timeout=0' 
+DATABASE_URL="mysql://root:@localhost:3307/djaladb?schema=public" 
 JWT_KEY = 'secret'
 host = 'localhost'
 user = 'duc'
